add endpoint article list
